added contact details

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
                 will be updated and based on that score candidates can apply for the job post.
             </p>
         </div>
+        <div>
+            <h3>Contacts Us</h3>
+            <p>
+                For any queries, you can reach us from  Monday to Saturday 24*6. Feel free to get in touch with us. You can share your ideas with our mail or through 
+                the customer support number.
+            </p>
+            <p>
+                Mail id: <a href="mailto:info@onegait.in">info@onegait.in</a>
+            </p> 
+            <p>
+            <p>Contact numbers:</p>
+            <div class="indent-content">
+                <p>Ikram</p>
+                <p>+91 9965489237</p>
+                <p>Thilak</p>
+                <p>+91 9003391853</p>
+            </div> 
+        </div>
     </div>
 </body>
 </html>
