--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="assets/stylesheet/style.css">
 </head>
 <body>
-    <div class="nav-bar">
+    <nav>
         <a href="index.html"><img class="logo" src="assets/images/Onegait-small.jpg" alt="Onegait"></a>
         <ul>
             <li><a href="#"><img class="social-icon" src="assets/images/instagram.png" alt="Instagram"></a></li>
             <li><a href="#"><img class="social-icon" src="assets/images/facebook.png" alt="Facebook"></a></li>
         </ul>
-    </div>
+    </nav>
     <div class="content">
         <h2>What is <strong>ONEGAIT</strong>?</h2>
         <p>
@@ -23,8 +23,8 @@
             candidates can apply for further rounds. The eligible candidates appear for further rounds.
         </p>
         <h2>How <strong>ONEGAIT</strong> works?</h2>
-        <div class="indent-content">
-            <h3>For Corporates:</h3>
+            <div class="indent">
+                <h3 id="Corporate">For Corporates:</h3>
             <p>
                 <strong>ONEGAIT</strong> team conducts online tests across various colleges which can test their knowledge from quantitative aptitude to their core field. This score 
                 can be used by the corporates to shortlist based on the candidate’s percentage. The shortlisted students can be allowed to apply for your company’s 
@@ -32,7 +32,7 @@
                 question pattern across colleges and continue your recruitment process. Use <strong>ONEGAIT</strong> to find the candidate you are looking for, by spending low cost 
                 and time. 
             </p>
-            <h3>For Institutes:</h3>
+            <h3 id="Institute">For Institutes:</h3>
             <p>
                 Institutes can allow their students to take tests online on their premises which will be an opportunity for their students to get placed in various MNC’s. 
                 Institutes can also use this platform to conduct a test on your own test pattern which can help institutes to test their students’ knowledge. 
@@ -40,32 +40,31 @@
                 such as Quantitative Aptitude, Logical Reasoning, Programming, Technical MCQs, and other core-based sections. <strong>'Continuous Evaluation'</strong> program helps 
                 institutions to build the skill of your students to compete in the industry and set a benchmark. 
             </p>
-            <h3>For Candidates:</h3>
+            <h3 id="Candidate">For Candidates:</h3>
             <p>
                 Candidates can use this platform efficiently so that they can get placed in various top MNC’s. This test can be taken in their respective college. Once 
                 a test is taken a profile is created and scores are updated. Based on this score students can apply for the job post in their profile. This score is 
                 valid for one year, students can use this score to apply for various jobs. Candidates can also retake the test if they have a poor score. The new score 
                 will be updated and based on that score candidates can apply for the job post.
             </p>
-        </div>
-        <div>
-            <h3>Contacts Us</h3>
-            <p>
-                For any queries, you can reach us from  Monday to Saturday 24*6. Feel free to get in touch with us. You can share your ideas with our mail or through 
-                the customer support number.
-            </p>
-            <p>
-                Mail id: <a href="mailto:info@onegait.in">info@onegait.in</a>
-            </p> 
-            <p>
-            <p>Contact numbers:</p>
-            <div class="indent-content">
-                <p>Ikram</p>
-                <p>+91 9965489237</p>
-                <p>Thilak</p>
-                <p>+91 9003391853</p>
-            </div> 
-        </div>
+            </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <div>
+                <h4>Contact Us</h4>
+                <p>Mail: <a href="mailto:info@onegait.in">info@onegait.in</a></p>
+                <p>Ikram: +91 9965489237</p>
+                <p>Thilak: +91 9003391853</p>
+            </div>
+            <div>
+                <h4>Customers</h4>
+                <p>Corporates</p>
+                <p>Institutes</p>
+                <p>Candidates</p>
+            </div>
+        </div>
+        <p style="text-align: center;">Copyright &copy; to Onegait.in</p>
+    </footer>
 </body>
 </html>
